java-app/manifest/0_namesapce.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-telemetry
  labels:
    istio-injection: disabled
