java-app/manifest/_namesapce.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-telemetry
