java-app/manifest/2_tomcat_deploy.yaml
# -Dotel.exporter.otlp.endpoint=http://apm-server-apm-server.elastic-apm.svc.cluster.local:8200                         
# -Dotel.exporter.otlp.headers="Authorization=Bearer UFhLUG9wZ0JHdEdHX2NHMmdHMmY6U0ZURkdUU1VSVUtwWDZlZGZiUjFHZw=="
# -javaagent:/usr/local/tomcat/lib/elastic-otel-javaagent-1.5.0.jar

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ht-tomcat
  namespace: hello-telemetry
spec:
  selector:
    matchLabels:
      app: ht-tomcat
  template:
    metadata:
      labels:
        app: ht-tomcat
        ver: "1.0"
        version: "2.0"
        deployment.environment: NEW_INT
      annotations:
       instrumentation.opentelemetry.io/inject-java: "observability/otel-instrumentation"

    spec:
      containers:
        - name: tomcat
          imagePullPolicy: Always
          image: zahcen/hello-telemetry-java-app:latest
          ports:
            - containerPort: 8080
            - containerPort: 9010
            - containerPort: 1099
      imagePullSecrets:
        - name: dockerhub-secret
