java-app/manifest/ht-tomcat_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ht-tomcat
  namespace: hello-telemetry
spec:
  selector:
    matchLabels:
      app: ht-tomcat
  template:
    metadata:
      labels:
        app: ht-tomcat
    spec:
      containers:
        - name: tomcat
          image: zahcen/hello-telemetry-java-app:latest
          ports:
            - containerPort: 8080
            - containerPort: 9010
            - containerPort: 1099
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
