java-app/manifest/3_tomcat_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ht-tomcat-svc
  namespace: hello-telemetry
spec:
  selector:
    app: ht-tomcat
  ports:
    - port: 8080
      targetPort: 8080
      name: port_8080
      protocol: TCP
    - port: 9010
      targetPort: 9010
      name: port_9010
      protocol: TCP
    - port: 1099
      targetPort: 1099
      name: port_1099
      protocol: TCP
  type: ClusterIP
