java-app/manifest/5_tomcat_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: hello-telemetry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ht.zitaconseil.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ht-tomcat-svc
                port:
                  number: 8080
