java-app/manifest/5_tomcat_ingress_metrics-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: elastic-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /intake/v2/rum/events
spec:
  ingressClassName: nginx
  rules:
    - host: ht.zitaconseil.fr
      http:
        paths:
          - path: /metrics-api/
            pathType: Prefix
            backend:
              service:
                name: apm-server-apm-http
                port:
                  number: 8200
